[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tuminha <83960151+Tuminha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.31.0"
jupyter = "^1.0.0"
pandas = ">=1.2.0,<2.0.0"
ipykernel = "^6.24.0"
pyarrow = "^12.0.1"
fastparquet = "^2023.7.0"
tqdm = "^4.65.0"
plotly-express = "^0.4.1"
sklearn = "^0.0.post5"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
lightgbm = "^3.3.5"
optuna = "^3.2.0"
python-dotenv = "^1.0.0"
confluent-kafka = "^1.9.0"
hopsworks = "^3.2.0"
kafka = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


